# positif

./: .gitignore  README.md  pyproject.toml
positif/: conversion.py  main.py  parameters.py  parser.py  positif.toml
positif/curves/: portra160.profile
positif/curves/ektar/: defaults.toml
positif/curves/portra160/: defaults.toml
