[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "positif"
version = "0.0.2"
authors = [
    { name = "Roman", email = "roman@vintage-camera.pictures" },
]
description = "Convert colour film negatives digitised by a digital camera to positive images"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["convert negatives film photography colour digital camera digitise"]
dependencies = [
    "imageio>=2.22.4",
    "numpy>=1.23.4",
    "rawpy>=0.17.2",
    "scipy>=1.9.1"
]

[project.urls]
"Homepage" = "https://github.com/vintage-camera-pictures/positif"
"Bug Tracker" = "https://github.com/vintage-camera-pictures/positif/issues"

[project.scripts]
positif = "positif.main:main"